CSS Code refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>오버워치</title>
     <link
       rel="icon"
       type="image/x-icon"
       href="https://static.playoverwatch.com/img/favicon-696bc07714.ico"
     />
-    <title>오버워치</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.scss" />
   </head>
   <body>
     <section class="heroessection">
@@ -119,11 +120,5 @@
         </div>
       </div>
     </section>
-    <div class="logo">
-      <img
-        src="https://raw.githubusercontent.com/ParkYoungWoong/overwatch-hero-selector-vanilla/master/images/logo_overwatch.png"
-        alt="#"
-      />
-    </div>
   </body>
 </html>
